--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@shopify/shopify-app-session-storage-sqlite": "^1.2.1",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
     "multer": "^1.4.5-lts.1",
     "serve-static": "^1.14.1"
   },
