--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -28,6 +28,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^17.0.2",
     "react-drag-and-drop": "^3.0.0",
+    "react-joyride": "^2.5.5",
     "react-query": "^3.34.19",
     "react-router-dom": "^6.3.0",
     "vite": "^2.8.6"
