--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
     "serve-static": "^1.14.1"
   },
