--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "web/index.js",
   "license": "UNLICENSED",
+  "private": "true",
   "scripts": {
     "shopify": "shopify",
     "build": "shopify app build",
@@ -12,8 +13,8 @@
     "deploy": "shopify app deploy"
   },
   "dependencies": {
-    "@shopify/app": "3.45.4",
-    "@shopify/cli": "3.45.4"
+    "@shopify/app": "3.58.2",
+    "@shopify/cli": "3.58.2"
   },
   "author": "akbar"
 }
